# Recipe

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
api/: __init__.py  dependencies.py  recipe.py
api/public/: __init__.py
api/public/v1/: __init__.py  recipe.py
client/: base_client.py  client.py  mock_client.py  recipe_data.py  request_builder.py
config/: config.py  enums.py  exceptions.py  handlers.py
core/: config.py  enums.py  exceptions.py  handlers.py
schemas/: api_query_schema.py  base_schema.py  recipe_schema.py
schemas/pydantic/: api_query_schema.py
