[tool.poetry]
name = "recipes"
version = "0.1.0"
description = ""
authors = ["Shyskov <shyskov@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
pydantic = "^2.9.0"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
